<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Payments"
    android:background="@drawable/wave__1_">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginStart="134dp"
        android:layout_marginTop="58dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/Payment"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="328dp"
        android:layout_height="481dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="95dp"
        android:background="@drawable/roundconer2"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Card"
            android:textSize="20dp" />

        <EditText
            android:layout_width="330dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundconer2"
            android:text="@string/CNumber" />

        <EditText
            android:layout_width="330dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundconer2"
            android:text="@string/CPin" />


        <EditText
            android:layout_width="330dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundconer2"
            android:text="@string/Ex" />


        <EditText
            android:layout_width="330dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundconer2"
            android:text="@string/CHolder" />


        <EditText
            android:layout_width="330dp"
            android:layout_height="42dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/roundconer2"
            android:text="@string/TQ" />

        <Button
            android:layout_width="253dp"
            android:layout_height="37dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundconer2"
            android:text="@string/Pay" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>